# Clarix-backend

./: .gitignore  dependencies.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  static_knowledge.txt
api/: webhook.py
chroma_db/: chroma.sqlite3
core/: config.py  embeddings.py  rag.py  supabase.py
models/: knowledge.py
repositories/: knowledge.py
schemas/: webhook.py
services/: knowledge.py
