[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "FastAPI RAG Application using OpenAI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.3.0",
    "chromadb>=0.4.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.2",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
]

[tool.fastapi]
entrypoint = "main:app"

[tool.setuptools]
packages = ["api", "core", "models", "schemas", "services", "repositories"]
